--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jandex-2.0.2.Final.jar=D:\\salivon\\instal\\Project\\lib\\jandex-2.0.2.Final.jar
+file.reference.log4j-jcl-2.5.jar=D:\\salivon\\instal\\Project\\lib\\apache-log4j-2.5-bin\\log4j-jcl-2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +42,9 @@ javac.classpath=\
     ${libs.javaee-api-7.0.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.jandex-2.0.2.Final.jar}
+    ${file.reference.jandex-2.0.2.Final.jar}:\
+    ${libs.apache-log4j-2.5.classpath}:\
+    ${file.reference.log4j-jcl-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
